--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+  "name": "PhpToyFramework",
+  "version": "0.1.0".
+  "description": "php toy Framework",
   "autoload": {
       "classmap": [
           "src/"
@@ -6,5 +9,10 @@
   },
   "require-dev": {
       "phpunit/phpunit": "^9"
-  }
+  },
+  "scripts": {
+    "insall": "composer install --prefer-dist --no-progress",
+    "test": "./vendor/bin/phpunit tests"
+  },
+  "license": "MIT"
 }
