--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "PhpToyFramework",
-  "version": "0.1.0".
+  "version": "0.1.0",
   "description": "php toy Framework",
   "autoload": {
       "classmap": [
