--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,8 +30,9 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      run: composer install
-      run: composer test
+      run: |
+        composer install
+        composer test
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
